--- a/package.json
+++ b/package.json
@@ -22,9 +22,16 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native/new-app-screen": "0.81.4",
     "@react-navigation/native": "^7.1.17",
+    "@reduxjs/toolkit": "^2.9.0",
+    "formik": "^2.4.6",
+    "i18next": "^25.5.2",
     "react": "19.1.0",
+    "react-i18next": "^16.0.0",
     "react-native": "0.81.4",
-    "react-native-safe-area-context": "^5.5.2"
+    "react-native-safe-area-context": "^5.5.2",
+    "react-native-screens": "^4.16.0",
+    "react-redux": "^9.2.0",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
