--- a/package.json
+++ b/package.json
@@ -21,17 +21,22 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native/new-app-screen": "0.81.4",
+    "@react-navigation/drawer": "^7.5.8",
     "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native-stack": "^7.3.26",
     "@reduxjs/toolkit": "^2.9.0",
     "formik": "^2.4.6",
     "i18next": "^25.5.2",
     "react": "19.1.0",
     "react-i18next": "^16.0.0",
     "react-native": "0.81.4",
+    "react-native-gesture-handler": "^2.28.0",
+    "react-native-reanimated": "^4.1.2",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.16.0",
     "react-redux": "^9.2.0",
-    "yup": "^1.7.1"
+    "yup": "^1.7.1",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -59,6 +64,7 @@
     "jest": "^29.6.3",
     "lint-staged": "^16.2.1",
     "prettier": "2.8.8",
+    "react-native-dotenv": "^3.4.11",
     "react-test-renderer": "19.1.0",
     "typescript": "^5.8.3"
   },
