--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "react-i18next": "^16.0.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "^2.28.0",
-    "react-native-reanimated": "^4.1.2",
+    "react-native-reanimated": "3.19.1",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.16.0",
     "react-redux": "^9.2.0",
